# smartshark

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml  skills-lock.json
docs/: README.md  architecture-overview.md  backlog.md  domain-model.md  evidence-map-schema.md  implementation-modules.md  mvp-scope.md  (+4 more)
src/backend/: pyproject.toml
src/backend/app/: config.py  database.py  dependencies.py  main.py
src/backend/app/models/: __init__.py  analysis.py  annotation.py  audit.py  capture.py  capture_index.py  capture_slice.py  check_result.py  deep_analysis.py  evidence.py  evidence_link.py  metrics.py  profile.py  redaction.py  report.py  scoped_analysis.py  user.py
src/backend/app/routers/: admin.py  analysis.py  annotations.py  auth.py  capture_index.py  capture_slices.py  captures.py  conversations.py  deep_analysis.py  evidence.py  evidence_links.py  export.py  graph.py  lifecycle.py  metrics.py  packets.py  profiles.py  redaction.py  reports.py  scoped_analysis.py
src/backend/app/schemas/: analysis.py  annotation.py  audit.py  auth.py  capture.py  capture_index.py  capture_slice.py  conversation.py  deep_analysis.py  evidence.py  evidence_link.py  export.py  graph.py  metrics.py  packet.py  profile.py  redaction.py  report.py  scoped_analysis.py
src/backend/app/services/: annotation.py  audit.py  auth.py  capture.py  capture_indexer.py  capture_slice.py  deep_link.py  evidence_validator.py  export.py  hardening.py  lifecycle.py  packet_query.py  playbook.py  profile.py  redaction.py  report.py  scoped_analysis.py  seed.py  symptom_interview.py
(+42 files in other folders)
